<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="211dp"
		android:layout_marginTop="@android:dimen/app_icon_size">

		<ImageView
			android:id="@+id/imageView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/agregar_persona"
			app:srcCompat="@drawable/addfriend" />
	</FrameLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="32dp"
		android:layout_marginTop="32dp"
		android:layout_marginRight="32dp">

		<EditText
			android:id="@+id/editTextNombre"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:hint="@string/nombre"
			android:inputType="textPersonName" />

		<EditText
			android:id="@+id/editTextApellido"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:hint="@string/apellido"
			android:inputType="textPersonName" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginLeft="32dp"
		android:layout_marginRight="32dp"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/editTextTelefono"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="8"
				android:hint="@string/telefono"
				android:inputType="phone" />

			<Spinner
				android:id="@+id/age_spinner"
				android:layout_width="107dp"
				android:layout_height="match_parent"
				android:minWidth="32dp"
				android:spinnerMode="dropdown" />

		</LinearLayout>

		<EditText
			android:id="@+id/editTextEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/email_hint"
			android:inputType="textEmailAddress" />

		<EditText
			android:id="@+id/editTextFechaNacimiento"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/fechaNacimiento"
			android:inputType="textPersonName" />

		<Button
			android:id="@+id/button_send"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/enviar" />
	</LinearLayout>

</LinearLayout>